# mmm_tools

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: data_demo.csv
manuals/: env_how2.md  poetry_how2.md
mmm_tools/: exploratory_analysis.py  find_media_parameters.py  hyperparameters.py  libs_import.py  media_transformation.py  model_building.py  model_quality_estimation.py  model_validation.py  name_conventions.py  preprocessing.py  time_series.py
notebooks/: gls_generalized_least_squares.ipynb  two_stage_least_squares.ipynb  useful_funcs.ipynb
scripts/: workflow.py
