[tool.poetry]
name = "mmm_tools"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.2"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.1"
jupyterlab = "^4.0.8"
jupyter-ai = "^2.4.0"
openai = "^0.28.1"
grpcio = "^1.59.2"
seaborn = "^0.13.0"
statsmodels = "^0.14.0"
prophet = "^1.1.5"
ipywidgets = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
